// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzBadge > black color matches snapshot 1`] = `
"<div class="flex items-center justify-center gap-4 text-sm py-4 px-12 h-24 w-fit rounded-2xl bg-grey-500 text-core-white">
  <!--v-if-->Fiscozen
  <!--v-if-->
</div>"
`;

exports[`FzBadge > error color matches snapshot 1`] = `
"<div class="flex items-center justify-center gap-4 text-sm py-4 px-12 h-24 w-fit rounded-2xl bg-semantic-error-200 text-core-white">
  <!--v-if-->Fiscozen
  <!--v-if-->
</div>"
`;

exports[`FzBadge > info color matches snapshot 1`] = `
"<div class="flex items-center justify-center gap-4 text-sm py-4 px-12 h-24 w-fit rounded-2xl bg-semantic-info-200 text-core-white">
  <!--v-if-->Fiscozen
  <!--v-if-->
</div>"
`;

exports[`FzBadge > success color matches snapshot 1`] = `
"<div class="flex items-center justify-center gap-4 text-sm py-4 px-12 h-24 w-fit rounded-2xl bg-semantic-success-200 text-core-white">
  <!--v-if-->Fiscozen
  <!--v-if-->
</div>"
`;

exports[`FzBadge > warning color matches snapshot 1`] = `
"<div class="flex items-center justify-center gap-4 text-sm py-4 px-12 h-24 w-fit rounded-2xl bg-semantic-warning-200 text-core-black">
  <!--v-if-->Fiscozen
  <!--v-if-->
</div>"
`;
